# sensor-manager

./: Cargo.toml  Cross.toml
docker/: Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.armv7-unknown-linux-musleabihf  toolchain.cmake
src/: cli.rs  main.rs
src/manager/: anemometer.rs  audiomanager.rs  manager.rs  mod.rs
