[package]
name = "sensor_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
bmp280 = "0.4.0"
clap = { version = "4.1.0", features = ["derive"] }
# tokio = { version = "1.23.1", features = ["rt", "macros", "sync"] }
# bytes = "1.3.0"
# tts = "0.25.0"
# rodio = "0.16.0"
# espeaker = "0.1.1"
